--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
  </head>
  <body style="font-family: big caslon, serif; background-color:rgb(245, 236, 224);">
   <nav class="navbar navbar-expand-lg bg-light navbar-light">
-   <a style="color:#7D5F01;" class="navbar-brand" href="index.html">06.21.2024</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-body" aria-controls="navbar-body" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+   <a style="color:#7D5F01;" class="nav-link" href="index.html">06.21.2024</a>
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-body" aria-controls="navbar-body" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
    <div class="collapse navbar-collapse" id="navbar-body">
     <ul class="navbar-nav mr-auto"></ul>
     <ul class="navbar-nav ml-auto">
