--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
  </head>
  <body style="font-family: big caslon, serif; background-color:rgb(245, 236, 224);">
   <nav class="navbar navbar-expand-lg bg-light navbar-light">
-   <a style="color:#7D5F01;" class="nav-link" href="index.html">06.21.2024</a>
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-body" aria-controls="navbar-body" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+   <a style="color:#7D5F01;" class="navbar-brand" href="index.html">06.21.2024</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-body" aria-controls="navbar-body" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
    <div class="collapse navbar-collapse" id="navbar-body">
     <ul class="navbar-nav mr-auto"></ul>
     <ul class="navbar-nav ml-auto">
+      <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="index.html">Home</a></li>
       <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSd-sRB6cnhDRuhXmdQf-II3J9CDO6IPQNVLLfeCdfViLQMrIA/viewform">RSVP</a></li>
       <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="our_story.html">Our Story</a></li>
       <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="travel_stay.html">Travel & Stay</a></li>
@@ -59,6 +59,7 @@
    
   <footer class="bg-light text-light pt-5 pb-2 px-5">
    <ul class="row justify-content-center">
+    <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="index.html">Home</a></li>
     <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSd-sRB6cnhDRuhXmdQf-II3J9CDO6IPQNVLLfeCdfViLQMrIA/viewform">RSVP</a></li>
     <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="our_story.html">Our Story</a></li>
     <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="travel_stay.html">Travel & Stay</a></li>
