--- a/our_story.html
+++ b/our_story.html
@@ -44,13 +44,17 @@
    <button type="button" class="btn btn-primary btn-lg" style="font-family: Bodoni Moda; line-height: 44px; font-weight: bolder; text-transform: uppercase; letter-spacing: 3px; background-color: #7D5F01; color: white; border: none;" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSd-sRB6cnhDRuhXmdQf-II3J9CDO6IPQNVLLfeCdfViLQMrIA/viewform'">RSVP</button>
    <div class='my-5'></div>
    !-->
-   <div class='my-5'></div>
-   <blockquote style = "color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-top: 25px; padding-bottom: 15px;" class="blockquote">
-    <p>“Love that leads to marriage is a gift from God and a great act of faith toward other human beings.”</p>
-    <footer style = "color:#7D5F01;"  class="blockquote-footer">
-     St. Pope John Paul II <cite title="Source Title"><a href="#" target="_blank"></a></cite>
-    </footer>
-   </blockquote>
+   <div style="text-align: center;">
+    <blockquote style="color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-left: 200px; padding-right: 200px;" class="blockquote">
+        <p style="margin: 0;">“Love that leads to marriage is a gift from God and a great act of faith toward other human beings.”</p>
+        <footer style="color:#7D5F01;" class="blockquote-footer">
+            St. Pope John Paul II <cite title="Source Title"><a href="#" target="_blank"></a></cite>
+        </footer>
+    </blockquote>
+</div>
+
+
+
 
    
   <footer class="bg-light text-light pt-5 pb-2 px-5">
