--- a/catholic_weddings.html
+++ b/catholic_weddings.html
@@ -23,6 +23,12 @@
    </div>
   </nav>
   <div class='my-5'></div>
+  <div style="text-align: center;">
+    <h1 style="color:#7D5F01; font-size:5zvw; margin: 16px 0; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 10px; padding-top: 25px; padding-bottom: 15px;">Catholic Weddings</h1>
+  
+    <p style="color:#7D5F01; font-size:large; margin: 12px 0; font-family: Bodoni Moda; line-height: 44px; font-weight: 300;"></p>
+    
+    </div>
   <!--
   <source srcset="initials_logo.jpg" type="image/svg+xml">
   <img src="initials_logo_2.png" class="mx-auto d-block" style="max-width: 30%;" alt="Responsive image">  <div class="container" id="bsr-wrapper" style="text-align:center;">
