--- a/our_story.html
+++ b/our_story.html
@@ -6,6 +6,19 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
   <title>Page Title</title>
+  <style>
+    .photo-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px; /* Adjust the gap as needed */
+    }
+
+    .photo {
+        width: 100%;
+        height: auto;
+        border-radius: 8px;
+    }
+</style>
  </head>
  <body style="font-family: big caslon, serif; background-color:rgb(245, 236, 224);">
   <nav class="navbar navbar-expand-lg bg-light navbar-light">
@@ -22,6 +35,7 @@
     </ul>
    </div>
   </nav>
+  
   <div class='my-5'></div>
   <div style="text-align: center;">
   <h1 style="color:#7D5F01; font-size:5zvw; margin: 16px 0; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 10px; padding-top: 25px; padding-bottom: 15px;">Our Story</h1>
@@ -29,6 +43,20 @@
   <p style="color:#7D5F01; font-size:large; margin: 12px 0; font-family: Bodoni Moda; line-height: 44px; font-weight: 300;"></p>
   
   </div>
+  
+
+  <div class="photo-grid">
+    <img src="ww_p1.jpg" alt="Photo 1" class="photo">
+    <img src="ww_p2.jpg" alt="Photo 2" class="photo">
+    <img src="ww_p3.jpg" alt="Photo 3" class="photo">
+    <img src="ww_p4.jpg" alt="Photo 4" class="photo">
+    <img src="ww_p5.jpg" alt="Photo 5" class="photo">
+    <img src="ww_p6.jpg" alt="Photo 6" class="photo">
+    <img src="ww_p7.jpg" alt="Photo 7" class="photo">
+    <img src="ww_p8.jpg" alt="Photo 8" class="photo">
+    <img src="ww_p9.jpg" alt="Photo 9" class="photo">
+</div>
+
   <!--
   <source srcset="initials_logo.jpg" type="image/svg+xml">
   <img src="initials_logo_2.png" class="mx-auto d-block" style="max-width: 30%;" alt="Responsive image">  <div class="container" id="bsr-wrapper" style="text-align:center;">
@@ -50,6 +78,8 @@
    <button type="button" class="btn btn-primary btn-lg" style="font-family: Bodoni Moda; line-height: 44px; font-weight: bolder; text-transform: uppercase; letter-spacing: 3px; background-color: #7D5F01; color: white; border: none;" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSd-sRB6cnhDRuhXmdQf-II3J9CDO6IPQNVLLfeCdfViLQMrIA/viewform'">RSVP</button>
    <div class='my-5'></div>
    !-->
+   <div class='my-5'></div>
+
    <div style="text-align: center;">
     <blockquote style="color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-left: 200px; padding-right: 200px;" class="blockquote">
         <p style="margin: 0;">“Love that leads to marriage is a gift from God and a great act of faith toward other human beings.”</p>
@@ -58,6 +88,7 @@
         </footer>
     </blockquote>
 </div>
+<div class='my-5'></div>
 
 
 
