--- a/registry.html
+++ b/registry.html
@@ -12,13 +12,13 @@
    <a style="color:#7D5F01;" class="navbar-brand" href="index.html">06.21.2024</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-body" aria-controls="navbar-body" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
    <div class="collapse navbar-collapse" id="navbar-body">
     <ul class="navbar-nav mr-auto"></ul>
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto">      
      <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="index.html">Home</a></li>
-     <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSd-sRB6cnhDRuhXmdQf-II3J9CDO6IPQNVLLfeCdfViLQMrIA/viewform">RSVP</a></li>
-     <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="our_story.html">Our Story</a></li>
-     <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="travel_stay.html">Travel & Stay</a></li>
-     <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="https://www.zola.com/registry/kylieandevan2024?preview=true">Registry</a></li>
-     <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="catholic_weddings.html">Catholic Weddings!</a></li>
+     <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSd-sRB6cnhDRuhXmdQf-II3J9CDO6IPQNVLLfeCdfViLQMrIA/viewform">RSVP</a></li>
+     <!--<li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="our_story.html">Our Story</a></li>-->
+     <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="travel_stay.html">Travel & Stay</a></li>
+     <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="registry.html">Registry</a></li>
+     <!--<li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="catholic_weddings.html">Catholic Weddings!</a></li>-->
     </ul>
    </div>
   </nav>
@@ -73,10 +73,10 @@
    <ul class="row justify-content-center">
       <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="index.html">Home</a></li>
       <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSd-sRB6cnhDRuhXmdQf-II3J9CDO6IPQNVLLfeCdfViLQMrIA/viewform">RSVP</a></li>
-      <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="our_story.html">Our Story</a></li>
+      <!--<li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="our_story.html">Our Story</a></li>-->
       <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="travel_stay.html">Travel & Stay</a></li>
-      <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="https://www.zola.com/registry/kylieandevan2024?preview=true">Registry</a></li>
-      <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="catholic_weddings.html">Catholic Weddings!</a></li>
+      <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="registry.html">Registry</a></li>
+      <!--<li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="catholic_weddings.html">Catholic Weddings!</a></li>-->
     </ul>      
    </div>
   </footer>
