--- a/registry.html
+++ b/registry.html
@@ -15,10 +15,10 @@
     <ul class="navbar-nav ml-auto">
      <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="index.html">Home</a></li>
      <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSd-sRB6cnhDRuhXmdQf-II3J9CDO6IPQNVLLfeCdfViLQMrIA/viewform">RSVP</a></li>
-     <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="our_story.html">Our Story</a></li>
+     <!--<li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="our_story.html">Our Story</a></li>!-->
      <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="travel_stay.html">Travel & Stay</a></li>
      <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="https://www.zola.com/registry/kylieandevan2024?preview=true">Registry</a></li>
-     <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="catholic_weddings.html">Catholic Weddings!</a></li>
+     <!--<li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="catholic_weddings.html">Catholic Weddings!</a></li>!-->
     </ul>
    </div>
   </nav>
@@ -73,10 +73,10 @@
    <ul class="row justify-content-center">
       <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="index.html">Home</a></li>
       <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSd-sRB6cnhDRuhXmdQf-II3J9CDO6IPQNVLLfeCdfViLQMrIA/viewform">RSVP</a></li>
-      <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="our_story.html">Our Story</a></li>
+      <!--<li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="our_story.html">Our Story</a></li>!-->
       <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="travel_stay.html">Travel & Stay</a></li>
       <li class="navbar-brand"><a style="color: #7D5F01;" class="nav-link" href="https://www.zola.com/registry/kylieandevan2024?preview=true">Registry</a></li>
-      <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="catholic_weddings.html">Catholic Weddings!</a></li>
+      <!--<li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="catholic_weddings.html">Catholic Weddings!</a></li>!-->
     </ul>      
    </div>
   </footer>
