--- a/travel_stay.html
+++ b/travel_stay.html
@@ -59,16 +59,21 @@
        </div>
     </div>
     <div class="my-5"></div>
-    <div style="flex: 1; text-align: center;">Please note, if you are attending the welcome party you will use the Eddy St. parking garage next to the Embassy Suites and park on the 1st level. You can validate your parking tickets at the event (the bartender has them). <br></div>
+    <blockquote style="color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-left: 200px; padding-right: 200px;" class="blockquote">
+        <p style="margin: 0;">Please Note:</p>
+    </blockquote>
+    <div style="display: flex; color: #7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-top: 25px; padding-bottom: 15px; font-size: 2em; align-items: center;">
+    <div style="flex: 1; text-align: center;">If you are attending the welcome party you will use the Eddy St. parking garage next to the Embassy Suites and park on the 1st level. You can validate your parking tickets at the event (the bartender has them). <br></div>
+    <div class="my-3"></div>
     <div style="flex: 1; text-align: center;">Guests staying at the Embassy Suites will park in the Eddy St. parking garage in the hotel parking spots which are located in the basement level. <br></div>
     <div class="my-3"></div>
    <div style="text-align: center;">
-    <blockquote style="color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-left: 200px; padding-right: 200px;" class="blockquote">
-        <p style="margin: 0;">“Love that leads to marriage is a gift from God and a great act of faith toward other human beings.”</p>
-        <footer style="color:#7D5F01;" class="blockquote-footer">
-            St. Pope John Paul II <cite title="Source Title"><a href="#" target="_blank"></a></cite>
-        </footer>
-    </blockquote>
+   <blockquote style = "color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-top: 25px; padding-bottom: 15px;" class="blockquote">
+    <p>“Love that leads to marriage is a gift from God and a great act of faith toward other human beings.”</p>
+    <footer style = "color:#7D5F01;"  class="blockquote-footer">
+     St. Pope John Paul II <cite title="Source Title"><a href="#" target="_blank"></a></cite>
+    </footer>
+   </blockquote>
 </div>
 
    
