--- a/travel_stay.html
+++ b/travel_stay.html
@@ -59,12 +59,12 @@
        </div>
     </div>
     <div class="my-5"></div>
-    <blockquote style="color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-left: 200px; padding-right: 200px;" class="blockquote">
+    <blockquote style="color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px;>
         <p style="margin: 0;">Please Note:</p>
     </blockquote>
-    <div style="display: flex; color: #7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-top: 25px; padding-bottom: 15px; font-size: 2em; align-items: center;">
+    <div style="display: flex; color: #7D5F01; font-family: Bodoni Moda;>
     <div style="flex: 1; text-align: center;">If you are attending the welcome party you will use the Eddy St. parking garage next to the Embassy Suites and park on the 1st level. You can validate your parking tickets at the event (the bartender has them). <br></div>
-    <div class="my-3"></div>
+    <!--div class="my-3"></div!-->
     <div style="flex: 1; text-align: center;">Guests staying at the Embassy Suites will park in the Eddy St. parking garage in the hotel parking spots which are located in the basement level. <br></div>
     <div class="my-3"></div>
    <div style="text-align: center;">
