--- a/travel_stay.html
+++ b/travel_stay.html
@@ -59,8 +59,14 @@
        </div>
     </div>
     <div class="my-5"></div>
+    <blockquote style="color:#7D5F01; font-family: Bodoni Moda; text-transform: uppercase; letter-spacing: 5px; line-height: 44px; font-weight: 300; text-align: center;">
+        <p style="margin: 0;">Please Note</p>
+    </blockquote>
+    <blockquote style="color:#7D5F01; font-family: Bodoni Moda;line-height: 44px; font-weight: 300; text-align: center;">
+        <p style="margin: 0;">If you are attending the welcome party you will use the Eddy St. parking garage next to the Embassy Suites and park on the 1st level. You can validate your parking tickets at the event (the bartender has them).</p>
+    </blockquote>
     <blockquote style="color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-align: center;">
-        <p style="margin: 0;">Please Note: If you are attending the welcome party you will use the Eddy St. parking garage next to the Embassy Suites and park on the 1st level. You can validate your parking tickets at the event (the bartender has them). Guests staying at the Embassy Suites will park in the Eddy St. parking garage in the hotel parking spots which are located in the basement level.</p>
+        <p style="margin: 0;">Guests staying at the Embassy Suites will park in the Eddy St. parking garage in the hotel parking spots which are located in the basement level.</p>
     </blockquote>
     <!--div style="display: flex; color: #7D5F01; font-family: Bodoni Moda;text-align: center;">
     <div style="flex: 1; text-align: center;">If you are attending the welcome party you will use the Eddy St. parking garage next to the Embassy Suites and park on the 1st level. You can validate your parking tickets at the event (the bartender has them). <br></div>
