--- a/registry.html
+++ b/registry.html
@@ -62,12 +62,12 @@
       <div class="my-3"></div>
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><script src="js/main.js"></script>
    <div style="text-align: center;">
-    <blockquote style="color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-left: 200px; padding-right: 200px;" class="blockquote">
-        <p style="margin: 0;">“Love that leads to marriage is a gift from God and a great act of faith toward other human beings.”</p>
-        <footer style="color:#7D5F01;" class="blockquote-footer">
-            St. Pope John Paul II <cite title="Source Title"><a href="#" target="_blank"></a></cite>
-        </footer>
-    </blockquote>
+   <blockquote style = "color:#7D5F01; font-family: Bodoni Moda; line-height: 44px; font-weight: 300; text-transform: uppercase; letter-spacing: 5px; padding-top: 25px; padding-bottom: 15px; text-align: center;class="blockquote">
+    <p>“Love that leads to marriage is a gift from God and a great act of faith toward other human beings.”</p>
+    <footer style = "color:#7D5F01;"  class="blockquote-footer"text-align: center;>
+     St. Pope John Paul II <cite title="Source Title"><a href="#" target="_blank"></a></cite>
+    </footer>
+   </blockquote>
 </div>
   <footer class="bg-light text-light pt-5 pb-2 px-5">
    <ul class="row justify-content-center">
