--- a/travel_stay.html
+++ b/travel_stay.html
@@ -44,7 +44,8 @@
              <div class="card text-center">
                 <img src="https://www.hilton.com/im/en/SBNINGI/10126614/sbnin-exterior-02.jpg?impolicy=crop&cw=5992&ch=3354&gravity=NorthWest&xposition=0&yposition=322&rw=768&rh=430" height="180" class="card-img-top" alt="...">
                 <div class="card-body ">
-                   <p class="mt-3 text-center" style="color: #7D5F01;"><a href="https://www.hilton.com/en/hotels/sbningi-hilton-garden-inn-south-bend/" type="button" class="btn btn-primary text-dark" style="color: #7D5F01;">Hilton Garden Inn</a></p>
+                   <button type="button" class="btn btn-primary btn-lg" style="font-family: Bodoni Moda; line-height: 44px; font-weight: bolder; text-transform: uppercase; letter-spacing: 3px; background-color: #7D5F01; color: white; border: none;" onclick="window.location.href='https://www.hilton.com/en/hotels/sbningi-hilton-garden-inn-south-bend/'">Hilton Garden Inn</button>
+                   <!--p class="mt-3 text-center" style="color: #7D5F01;"><a href="https://www.hilton.com/en/hotels/sbningi-hilton-garden-inn-south-bend/" type="button" class="btn btn-primary text-dark" style="color: #7D5F01;">Hilton Garden Inn</a></p!-->
                 </div>
              </div>
           </div>
