--- a/travel_stay.html
+++ b/travel_stay.html
@@ -29,6 +29,24 @@
     <p style="color:#7D5F01; font-size:large; margin: 12px 0; font-family: Bodoni Moda; line-height: 44px; font-weight: 300;"></p>
     
     </div>
+      <blockquote style="color:#7D5F01; font-family: Bodoni Moda; text-transform: uppercase; letter-spacing: 5px; line-height: 44px; font-weight: 300; text-align: center;">
+        <p style="margin: 0;">WELCOME PARTY</p>
+    </blockquote>
+    <blockquote style="color:#7D5F01; font-family: Bodoni Moda;line-height: 44px; font-weight: 300; text-align: center;">
+        <p style="margin: 0;">Thursday, June 20th 7-11 PM — The Podium at The Embassy Suites — 1140 East Angela Boulevard</p>
+    </blockquote>
+        <blockquote style="color:#7D5F01; font-family: Bodoni Moda; text-transform: uppercase; letter-spacing: 5px; line-height: 44px; font-weight: 300; text-align: center;">
+        <p style="margin: 0;">CEREMONY</p>
+    </blockquote>
+    <blockquote style="color:#7D5F01; font-family: Bodoni Moda;line-height: 44px; font-weight: 300; text-align: center;">
+        <p style="margin: 0;">Friday, June 21st 1:00 PM — Basilica of the Sacred Heart — 101 Basilica Drive</p>
+    </blockquote>
+    <blockquote style="color:#7D5F01; font-family: Bodoni Moda; text-transform: uppercase; letter-spacing: 5px; line-height: 44px; font-weight: 300; text-align: center;">
+        <p style="margin: 0;">WEDDING RECEPTION</p>
+    </blockquote>
+    <blockquote style="color:#7D5F01; font-family: Bodoni Moda;line-height: 44px; font-weight: 300; text-align: center;">
+        <p style="margin: 0;">Friday, June 21st 5:00 PM — Dahnke Ballroom, Door 14 — The University of Notre Dame Stadiump>
+    </blockquote>
    <body>
     <div class="container" id="bsr-wrapper">
        <div class="row">
