--- a/travel_stay.html
+++ b/travel_stay.html
@@ -45,8 +45,9 @@
         <p style="margin: 0;">WEDDING RECEPTION</p>
     </blockquote>
     <blockquote style="color:#7D5F01; font-family: Bodoni Moda;line-height: 44px; font-weight: 300; text-align: center;">
-        <p style="margin: 0;">Friday, June 21st 5:00 PM — Dahnke Ballroom, Door 14 — The University of Notre Dame Stadiump>
+        <p style="margin: 0;">Friday, June 21st 5:00 PM — Dahnke Ballroom, Door 14 — The University of Notre Dame Stadium</p>
     </blockquote>
+  <div></div>
    <body>
     <div class="container" id="bsr-wrapper">
        <div class="row">
