--- a/travel_stay.html
+++ b/travel_stay.html
@@ -34,6 +34,7 @@
     </blockquote>
     <blockquote style="color:#7D5F01; font-family: Bodoni Moda;line-height: 44px; font-weight: 300; text-align: center;">
         <p style="margin: 0;">Thursday, June 20th 7-11 PM — The Podium at The Embassy Suites — 1140 East Angela Boulevard</p>
+        <p style="margin: 0;">Attire: Dressy Casual or Cocktail</p>
     </blockquote>
         <blockquote style="color:#7D5F01; font-family: Bodoni Moda; text-transform: uppercase; letter-spacing: 5px; line-height: 44px; font-weight: 300; text-align: center;">
         <p style="margin: 0;">CEREMONY</p>
@@ -46,6 +47,7 @@
     </blockquote>
     <blockquote style="color:#7D5F01; font-family: Bodoni Moda;line-height: 44px; font-weight: 300; text-align: center;">
         <p style="margin: 0;">Friday, June 21st 5:00 PM — Dahnke Ballroom, Door 14 — The University of Notre Dame Stadium</p>
+        <p style="margin: 0;">Attire: Cocktail</p>
     </blockquote>
   <div></div>
    <body>
