--- a/travel_stay.html
+++ b/travel_stay.html
@@ -50,6 +50,9 @@
         <p style="margin: 0;">Attire: Cocktail</p>
     </blockquote>
   <div></div>
+  <img src="things_to_do_sb.png" height="300" class="card-img-top" alt="...">
+  <div></div>
+  <div></div>
    <body>
     <div class="container" id="bsr-wrapper">
        <div class="row">
