--- a/travel_stay.html
+++ b/travel_stay.html
@@ -50,7 +50,7 @@
         <p style="margin: 0;">Attire: Cocktail</p>
     </blockquote>
   <div></div>
-  <img src="things_to_do_sb.png" height="300" class="card-img-top" alt="...">
+  <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="things_to_do.png">Things to do!</a></li>
   <div></div>
   <div></div>
    <body>
