--- a/travel_stay.html
+++ b/travel_stay.html
@@ -50,7 +50,9 @@
         <p style="margin: 0;">Attire: Cocktail</p>
     </blockquote>
   <div></div>
-  <li class="navbar-brand"><a style="color:#7D5F01;" class="nav-link" href="things_to_do.png">Things to do!</a></li>
+  <a href="path/to/your/image.png">
+    <img src="things_to_do.png" alt="Things to do!">
+  </a>
   <div></div>
   <div></div>
    <body>
