--- a/travel_stay.html
+++ b/travel_stay.html
@@ -50,7 +50,7 @@
         <p style="margin: 0;">Attire: Cocktail</p>
     </blockquote>
   <div></div>
-  <a href="path/to/your/image.png">
+  <a href="things_to_do.png">
     <img src="things_to_do.png" alt="Things to do!">
   </a>
   <div></div>
