--- a/travel_stay.html
+++ b/travel_stay.html
@@ -50,9 +50,7 @@
         <p style="margin: 0;">Attire: Cocktail</p>
     </blockquote>
   <div></div>
-  <a href="things_to_do.png">
-    <img src="things_to_do.png" alt="Things to do!">
-  </a>
+  <img src="things_to_do.png" class="centered-image">
   <div></div>
   <div></div>
    <body>
