--- a/travel_stay.html
+++ b/travel_stay.html
@@ -50,7 +50,7 @@
         <p style="margin: 0;">Attire: Cocktail</p>
     </blockquote>
   <div></div>
-  <img src="things_to_do.png" class="centered-image">
+  <img src="things_to_do.png" alt="..."></img>
   <div></div>
   <div></div>
    <body>
