--- a/travel_stay.html
+++ b/travel_stay.html
@@ -53,6 +53,7 @@
   <img src="things_to_do_sb.png" style="display: block; margin-left: auto; margin-right: auto; width: 30%;">
   <div></div>
   <div></div>
+  <div></div>
    <body>
     <div class="container" id="bsr-wrapper">
        <div class="row">
